# kmk

./: README.md  SPEC.md  pyproject.toml
docs/: SPEC.md
scripts/: benchmark_kinematics.py
src/kmk/: __init__.py  _kinematics_experimental.py  hand_info.py  kinematics.py  pose.py
src/kmk/config/: __init__.py  model.py  parse.py
src/kmk/wizard/: __init__.py  cli.py  gui.py  session.py
tests/: test_config_model.py  test_config_parse.py  test_hand_info.py  test_kinematics.py  test_kinematics_benchmark.py  test_kinematics_experimental.py  test_wizard_cli.py  test_wizard_gui.py
visualize/: hand_kinematics_batch.py  pointed_hand_info.py
