[project]
name = "kmk"
version = "0.1.2"
description = "Keypoint-based multi-fingered hand kinematics and configuration tools."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.0",
    "pyyaml>=6.0.1",
    "scipy>=1.13.0",
    "torch>=2.3.0",
    "tyro>=0.8.12",
    "viser>=1.0.24",
    "yourdfpy>=0.0.60",
]

[project.urls]
Homepage = "https://github.com/kh11kim/kmk.git"
Repository = "https://github.com/kh11kim/kmk.git"

[dependency-groups]
dev = [
    "playwright>=1.58.0",
    "pytest>=8.2.0",
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
gripper_config_wizard = "kmk.wizard.cli:main"
